Reference reorder.html

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -109,7 +109,8 @@ maintain and improve quality.
 <dt><b>May 2, 2000</b></dt>
 <dd>
 Stan Cox and Jason Eckhardt of Cygnus, a Red Hat company, have
-contributed a basic block reordering pass. The optimization can
+contributed a <a href="news/reorder.html">basic block reordering pass</a>.
+The optimization can
 reposition basic blocks from across the entire function in an attempt
 to reduce branch penalties and enhance instruction cache efficiency.
 <p>
