* criteria.html: Updated LAPACK information.

--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -171,7 +171,7 @@ regression test-suites.</p>
 <h2>Applications</h2>
 
 <p>In addition to the regression-testing mentioned above, it is
-important that operation of the compiler be verified on some real-word
+important that operation of the compiler be verified on some real-world
 applications.  The following applications represent a mix of low-level
 and high-level code, of numerical and logical programs, and of
 different programming languages.</p>
@@ -197,7 +197,9 @@ different programming languages.</p>
         pooma-2.2.0.tgz</a>
 <tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a>
     <td>Fortran
-    <td>2.0
+    <td>3.0
+    <td><a href="http://www.netlib.org/lapack/lapack.tgz">
+        LAPACK (testing programs)</a>
 <tr><td><td>Java
 </tr>
 </table>
@@ -224,6 +226,12 @@ inordinately much time and memory at compile-time.  With the
 widespread prevalence of templates in C++ programs, including the
 standard library, testing this area heavily is vitally important.</p>
 
+<p>LAPACK is a well known linear algebra package that contains
+code typical for large scale Fortran programs.
+For instructions on how to set up and build LAPACK and check the
+outcome of its testing programs see <a href="lapack-guide.html">
+this guide</a>.</p>
+
 <p>As progress is made towards the release, specific information about
 how these programs should be compiled, and how their correct operation
 should be verified will be made available here.  In general, however,
@@ -247,7 +255,9 @@ for measuring code quality:</p>
 <tr><td>Stepanov<td>C++
     <td><a href="ftp://ftp.kai.com/pub/benchmarks/stepanov_v1p2.C">
          stepanov_v1p2.C</a>
-<tr><td><td>Fortran
+<tr><td>LAPACK<td>Fortran
+    <td><a href="http://www.netlib.org/lapack/lapack.tgz">
+        LAPACK 3.0 (timing programs)</a>
 </table>
 
 <p>A Java benchmark is not required for this release since there is
