Delete pointer to backup search, fix searchbox reference.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -84,13 +84,10 @@ above, we also provide
 <a href="ftp://egcs.cygnus.com/pub/gcc/mail-archives/">mbox formatted
 archives of each mailing list</a>.
 
-<p>The web archives are <a href="#searchbox">searchable</a> for
-messages from the beginning of 1999 and on.
-A <a href="http://bitrange.com/gcc/search.html">backup search
-engine</a> that includes 1997 and 1998, is currently hosted at
-<a href="http://bitrange.com/">BitRange.com</a>. If you have
-comments about the search function, please send a copy to
-<a href="mailto:hp@bitrange.com">hp@bitrange.com</a>.
+<!-- The server-side included form does not show up at mirrors, so refer
+     to it by an explicit hostname to avoid confusion.  -->
+<p>The web archives are <a
+href="http://gcc.gnu.org/lists.html#searchbox">searchable</a>.</p>
 
 
 <h2>Subscribing/unsubscribing</h2>
