Fix spelling on DJGPP.

--- a/htdocs/install/binaries.html
+++ b/htdocs/install/binaries.html
@@ -18,7 +18,7 @@ contact their makers.</p>
 <ul>
 <li><a href="http://www-frec.bull.com/docs/download.htm">AIX</a>
 
-<li>DOS: <a href="http://www.delorie.com/djgpp/">DJPP</a>
+<li>DOS: <a href="http://www.delorie.com/djgpp/">DJGPP</a>
 
 <li><a href="http://hpux.cae.wisc.edu/">HP-UX Porting Center</a>
 
