--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -79,6 +79,9 @@ Successful
 <p><b>hppa2.0w-hp-hpux11.00</b><br>
 Successful
 
+<p><b>i386-sequent-sysv4</b><br>
+Successful
+
 <p><b>i386-univel-sysv4.2MP</b><br>
 Successful
 
