--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -61,6 +61,7 @@ if you are mirroring the GCC pages so we can note it here!
 <li>Turkey (Izmir): <a href="ftp://gcc.deu.edu.tr/pub/egcs">gcc.deu.edu.tr</a>
 <li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a> 
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
+<li>US (California): <a href="ftp://ftp.freesoftware.com/pub/sourceware/gcc/">ftp.freesoftware.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>, thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 </ul>
