--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -9,7 +9,8 @@
 <h1 align="center">Read-write CVS access</h1>
 
 <p>We have read/write access to the CVS repository available for all our
-significant developers.
+significant developers. Maintainers are also encouraged to edit the
+<a href="gnatswrite.html">GNATS database</a>.
 
 <hr>
 <h3>Contents</h3>
