--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -33,13 +33,12 @@
 <A HREF="extensions.html">Extensions</A><BR>
 <A HREF="cvs.html">CVS read access</A><BR>
 <A HREF="cvswrite.html">CVS write access</A><BR>
+<A HREF="gnatswrite.html">GNATS write access</A><BR>
 </P>
 <H2>Bugs</H2>
 <P>
-<A HREF="faq.html#bugreport">Reporting...</A><BR>
-<!--
+<A HREF="bugs.html">Reporting...</A><BR>
 <A HREF="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">GNATS</A><BR>
--->
 <A HREF="bugs.html">Known bugs</A>
 </P>
 <H2>Download</H2>
