--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -39,6 +39,9 @@ href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a> or
       error, even if the source code can be downloaded from elsewhere</li>
 </ul>
 
+<p>Instead of sending a bug report by mail, you can also enter it
+directly into <a href="gnats.html">GNATS</a>.</p>
+
 <p>All this can normally be accomplished by mailing the command line, the
 output of the command, and the resulting `<tt><i>your-file</i>.i</tt>' for C,
 or `<tt><i>your-file</i>.ii</tt>' for C++, corresponding to:</p>
