Add missing trailing slash in a URL.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -159,7 +159,7 @@ GCC 2.95.x series of releases.  He has done an outstanding job.
 Andy Vaught has started work on GNU Fortran 95, the Fortran
 Frontend destined to implement the latest standard.  See
 <a href="http://g95.sourceforge.net/">this page</a> for its current
-status (previously over <a href="http://xena.eas.asu.edu/~andy">here</a>).
+status (previously over <a href="http://xena.eas.asu.edu/~andy/">here</a>).
 </dd>
 
 <dt><b>March 17, 2000</b></dt>
