Remove obsolete (and duplicate) footer information, now that we have the MetaHTML machinery.

--- a/htdocs/install/binaries.html
+++ b/htdocs/install/binaries.html
@@ -37,18 +37,17 @@ contact their makers.</p>
     Win32 related projects</a> by Mumit Khan
 </ul>
 
-In addition to those specific offerings, you can get a binary
+<p>In addition to those specific offerings, you can get a binary
 distribution CD-ROM from the <a
 href="http://www.fsf.org/order/order.html">Free Software
 Foundation</a>. It contains binaries for a number of platforms, and
 includes not only GCC, but other stuff as well. The current CD does
 not contain the latest version of GCC, but it should allow
 bootstrapping the compiler. An updated version of that disk is in the
-works.
+works.</p>
 
 <hr>
 <p><a href="./index.html">Return to the GCC Installation page</a></p>
-<p><i>Last modified on January 7, 2000.</i></p>
 
 </body>
 </html>
