--- a/htdocs/install/download.html
+++ b/htdocs/install/download.html
@@ -30,9 +30,8 @@ FTP download from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
 <p>GCC releases are available on many <a href="../mirrors.html">FTP mirror sites</a>. If possible, please use one of these.
 
-<p>
 <hr>
-<i>Last modified on July 16, 1999.</i>
+<p><a href="./index.html">Return to the GCC Installation page</a></p>
 
 </body>
 </html>
