--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -29,9 +29,8 @@ it!)
 <p>If you find a bug, please report it following our <a
 href="../faq.html#bugreport">bug reporting guidlines</a>.
 
-<p>
 <hr>
-<i>Last modified on January 7, 2000.</i>
+<p><a href="./index.html">Return to the GCC Installation page</a></p>
 
 </body>
 </html>
