--- a/htdocs/install/index.html
+++ b/htdocs/install/index.html
@@ -47,8 +47,7 @@ its own and simply remove that directory when you do not need that
 specific version of GCC any longer.
 
 <hr>
-<a href="../index.html">Return to the GCC home page</a>
-<hr>
-<i>Last modified on January 29, 2000.</i>
+<p><a href="./index.html">Return to the GCC Installation page</a></p>
+
 </body>
 </html>
