--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -13,9 +13,8 @@ that the testsuite will be included in the gcc releases again soon.
 <p>Until the testsuite is included it is impossible to run the testsuite.
 Sorry.
 
-
 <hr>
-<i>Last modified on July 15, 1999.</i>
+<p><a href="./index.html">Return to the GCC Installation page</a></p>
 
 </body>
 </html>
