--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -101,9 +101,8 @@ when building GCC.  You can use a bigger number instead of two if
 you like.  In most cases, it won't help to use a number bigger than
 the number of processors in your machine.
 
-<p>
 <hr>
-<i>Last modified on August 27, 1999.</i>
+<p><a href="./index.html">Return to the GCC Installation page</a></p>
 
 </body>
 </html>
