--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -19,7 +19,7 @@ candidate will not become the eventual release.  However, a release
 candidate that does meet these criteria may not necessarily become the
 official release; there may be other unforseen issues that prevent
 release.  For example, if support for the Intel Pentium II is required
-by the release criteria, it is never-the-less unlikely that GCC 3.0
+by the release criteria, it is nevertheless unlikely that GCC 3.0
 would be released even though it did not support the Intel
 Pentium.</p>
 
@@ -110,7 +110,7 @@ the secondary platforms will be dropped from this list.</p>
 
 <p>The bug-fixing volunteer will commit to ensuring that GCC 3.0 will
 at least bootstrap itself on each of these secondary platforms.  That
-committment doesn't necessarily mean fixing bugs personally; for
+commitment doesn't necessarily mean fixing bugs personally; for
 example, if you are a manager for a company with GCC expertise you
 could be the volunteer if you'll commit to donating your employee's
 efforst as necessary.  The release manager, and the GCC development
@@ -125,7 +125,7 @@ answering questions and reviewing patches as time permits.</p>
 <tr><td>SPARC    <td>SunOS 4.1.4     <td>sparc-sun-sunos4.1.4
 <tr><td>SPARC    <td>RedHat Linux 6.2<td>
 <tr><td>ARM      <td>Linux           <td>
-<tr><td>Intel x86<td>Cygwin          <td>
+<tr><td>Intel x86<td>Cygwin          <td>i586-pc-cygwin
 </table>
 
 <h2>Language Support</h2>
@@ -207,7 +207,7 @@ different programming languages.</p>
 <p>These selections were made for a variety of reasons.  The Linux
 kernel is one of the most important pieces of free software, and
 kernel developers pay careful attention to GCC performance.  It would
-be an embarassment to GCC 3.0 if it did not compile the kernel
+be an embarrassment to GCC 3.0 if it did not compile the kernel
 correctly, out of the box.  The kernel taxes many of the low-level
 aspects of GCC, as well as many GCC extensions, including the extended
 assembly syntax, addresses of labels, and so forth.  (Historically,
@@ -278,7 +278,7 @@ the benchmarks, and within at least 5% on the application tests.</p>
 
 <h2>Compile-Time Performance</h2>
 
-<p>There is a preception that development snapshots take longer to
+<p>There is a perception that development snapshots take longer to
 compile programs than their 2.95.2 counterparts, and that they often
 use more memory as well.  Compile-time performance is an important
 part of compiler quality.  It is not enough simply to provide
