* old-news.html: Added new old news. 	* index.html: Mention today's commit.  Removed old news.

--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -6,6 +6,66 @@
 
 <table>
 <tr><td valign="top">
+<b>March 26, 2000</b>
+</td><td>
+Hans Boehm contributed a port of libgcj to the IA-64.  This port
+includes the interpreter.
+</td></tr>
+
+<tr><td valign="top">
+<b>March 15, 2000</b>
+</td><td>
+Jon Beniston contributed the beginnings of a Windows port of libgcj.
+</td></tr>
+
+<tr><td valign="top">
+<b>March 13, 2000</b>
+</td><td>
+Alexandre Petit-Bianco has checked in a change to the compiler to add 
+support for most JDK 1.1 language features, such as inner classes.
+</td></tr>
+
+<tr><td valign="top">
+<b>March 9, 2000</b>
+</td><td>
+Warren Levy checked in the basics of the <tt>java.security.*</tt> packages
+that he and Tom Tromey have been putting together.  It is just the basics
+of <tt>java.security</tt> and some of it is indeed stubbed.  It has been
+tried with the 20000120 snapshot of 
+<a href="http://www.cryptix.org/products/jce">Cryptix JCE</a>
+so it is usable.
+
+Please note that it is mostly JDK 1.1 based but there are some JDK 1.2
+things included.
+</td></tr>
+
+<tr><td valign="top">
+<b>March 7, 2000</b>
+</td><td>
+Bryce McKinlay checked in a change to both the runtime and the
+compiler which implements constant-time interface method lookup
+and type checking.  This should provide a huge speed increase
+for programs that use interfaces or things like ``instanceof''.
+</td></tr>
+
+<tr><td valign="top">
+<b>March 6, 2000</b>
+</td><td>
+We are relicensing libgcj to a more liberal license, and we're
+assigning copyright to the <a href="http://www.gnu.org/">FSF</a>.
+This will let us share code with the
+<a href="http://www.classpath.org">Classpath</a> project.
+</td></tr>
+
+<tr><td valign="top">
+<b>March 2, 2000</b>
+</td><td>
+Tom Tromey changed g++ to allow CNI code to catch and throw exceptions
+Java-style.  This makes it much easier to write CNI code which calls
+Java methods that throw exceptions.
+</td></tr>
+
+<tr><td valign="top">
 <b>February 25, 2000</b>
 </td><td>
 Anthony Green added an important optimization to gcj.  His
