--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -71,13 +71,24 @@ i
 <table>
 
 <tr><td valign="top">
+<b>May 19, 2000</b>
+</td><td>
+Today we merged some major work done at Red Hat.  This included:
+<ul>
+<li> Substantial work for the IA-64 port.
+<li> <tt>java.beans</tt> from <a href="http://www.classpath.org">Classpath</a>.
+<li> A somewhat modified initial implementation of serialization.
+     (This is known not to interoperate with other implementations yet.)
+<li> Miscellaneous bug fixes.
+</td></tr>
+
+<tr><td valign="top">
 <b>May 2, 2000</b>
 </td><td>
 Tom Tromey checked in the JNI stubs patch for gcj.  This patch makes
 it possible to use compiled Java code where the native methods are
 implemented using JNI.
 </td></tr>
-
 
 <tr><td valign="top">
 <b>April 22, 2000</b>
@@ -110,67 +121,7 @@ of gcj and libgcj.  See his original
 </td></tr>
 
 <tr><td valign="top">
-<b>March 26, 2000</b>
-</td><td>
-Hans Boehm contributed a port of libgcj to the IA-64.  This port
-includes the interpreter.
-</td></tr>
-
-<tr><td valign="top">
-<b>March 15, 2000</b>
-</td><td>
-Jon Beniston contributed the beginnings of a Windows port of libgcj.
-</td></tr>
-
-<tr><td valign="top">
-<b>March 13, 2000</b>
-</td><td>
-Alexandre Petit-Bianco has checked in a change to the compiler to add 
-support for most JDK 1.1 language features, such as inner classes.
-</td></tr>
-
-<tr><td valign="top">
-<b>March 9, 2000</b>
-</td><td>
-Warren Levy checked in the basics of the <tt>java.security.*</tt> packages
-that he and Tom Tromey have been putting together.  It is just the basics
-of <tt>java.security</tt> and some of it is indeed stubbed.  It has been
-tried with the 20000120 snapshot of 
-<a href="http://www.cryptix.org/products/jce">Cryptix JCE</a>
-so it is usable.
-
-Please note that it is mostly JDK 1.1 based but there are some JDK 1.2
-things included.
-</td></tr>
-
-<tr><td valign="top">
-<b>March 7, 2000</b>
-</td><td>
-Bryce McKinlay checked in a change to both the runtime and the
-compiler which implements constant-time interface method lookup
-and type checking.  This should provide a huge speed increase
-for programs that use interfaces or things like ``instanceof''.
-</td></tr>
-
-<tr><td valign="top">
-<b>March 6, 2000</b>
-</td><td>
-We are relicensing libgcj to a more liberal license, and we're
-assigning copyright to the <a href="http://www.gnu.org/">FSF</a>.
-This will let us share code with the
-<a href="http://www.classpath.org">Classpath</a> project.
-</td></tr>
-
-<tr><td valign="top">
-<b>March 2, 2000</b>
-</td><td>
-Tom Tromey changed g++ to allow CNI code to catch and throw exceptions
-Java-style.  This makes it much easier to write CNI code which calls
-Java methods that throw exceptions.
-</td></tr>
-
-<tr><td valign="top">
-<b>Before March 2000</b>
+<b>Before April 2000</b>
 </td><td>
 <a href="old-news.html">Less recent GCJ news</a>
 </td></tr>
@@ -233,7 +184,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.40 2000/05/02 20:33:08 tromey Exp $
+$Id: index.html,v 1.41 2000/05/02 20:46:36 tromey Exp $
 </small>
 </address>
 
