* merge-status.html: Merged java.io.BufferedOutputStream, 	java.io.BufferedWriter.

--- a/htdocs/java/merge-status.html
+++ b/htdocs/java/merge-status.html
@@ -182,9 +182,9 @@
 <tr> <td align="left">java/beans/beancontext/BeanContextServicesListener.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/BlockDataException.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/BufferedInputStream.java</td> <td>unmerged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/BufferedOutputStream.java</td> <td>unmerged</td> <td></td>  </tr>
+<tr> <td align="left">java/io/BufferedOutputStream.java</td> <td>merged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/BufferedReader.java</td> <td>unmerged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/BufferedWriter.java</td> <td>unmerged</td> <td></td>  </tr>
+<tr> <td align="left">java/io/BufferedWriter.java</td> <td>merged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/ByteArrayInputStream.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/ByteArrayOutputStream.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/CharArrayReader.java</td> <td>unmerged</td> <td></td>  </tr>
