* merge-status.html: Mark java.io.PipedReader, 	java.io.PipedWriter, java.io.PipedInputStream, 	java.io.PipedOutputStream as merged.

--- a/htdocs/java/merge-status.html
+++ b/htdocs/java/merge-status.html
@@ -232,10 +232,10 @@
 <tr> <td align="left">java/io/OptionalDataException.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/OutputStream.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/OutputStreamWriter.java</td> <td>unmerged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/PipedInputStream.java</td> <td>unmerged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/PipedOutputStream.java</td> <td>unmerged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/PipedReader.java</td> <td>unmerged</td> <td></td>  </tr>
-<tr> <td align="left">java/io/PipedWriter.java</td> <td>unmerged</td> <td></td>  </tr>
+<tr> <td align="left">java/io/PipedInputStream.java</td> <td>merged</td> <td></td>  </tr>
+<tr> <td align="left">java/io/PipedOutputStream.java</td> <td>merged</td> <td></td>  </tr>
+<tr> <td align="left">java/io/PipedReader.java</td> <td>merged</td> <td></td>  </tr>
+<tr> <td align="left">java/io/PipedWriter.java</td> <td>merged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/PrintStream.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/PrintWriter.java</td> <td>unmerged</td> <td></td>  </tr>
 <tr> <td align="left">java/io/PushbackInputStream.java</td> <td>unmerged</td> <td></td>  </tr>
