--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -15,7 +15,7 @@
 <ul>
 
   <li><a href="ftp://ftp.axis.se/pub/users/hp/pgccfd/">Porting GCC for
-  Dummies</a> by Hans-Peter Nilsson &lt;<a href="mailto:hans-peter.nilsson@axis.com">hans-peter.nilsson@axis.com</a>&gt;.
+  Dunces</a> by Hans-Peter Nilsson &lt;<a href="mailto:hans-peter.nilsson@axis.com">hans-peter.nilsson@axis.com</a>&gt;.
 
   <li><a href="http://master.debian.org/~karlheg/Usenix88-lexic.pdf">Lexical
   Closures for C++</a> by Thomas M. Breuel, on the design and
