--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -64,6 +64,9 @@ Successful
 <p><b>armv4l-unknown-linux-gnu</b><br>
 Successful
 
+<p><b>hppa1.1-hp-hpux9.00</b><br>
+Successful
+
 <p><b>hppa1.1-hp-hpux10.01</b><br>
 Successful
 
