--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -14,7 +14,7 @@ activated; otherwise replies to status change notifications will
 bounce.</p>
 
 <p>You can access the database either via <a
-href="http://gcc.gnu.org/cgi-bin/gnatsweb.html">gnatsweb</a>, or via
+href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">gnatsweb</a>, or via
 the gnatsd running on gcc.gnu.org. Please check the gnats documentation
 for the latter option.<p>
 
