--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -66,7 +66,7 @@
 
 <TD BGCOLOR="white" VALIGN="top">
 
-<IMG SRC="logo.jpg" ALT="" ALIGN="RIGHT">
+<IMG SRC="gcc.jpg" ALT="" ALIGN="RIGHT">
 
 <h2>Welcome to the GCC home page!</h2>
 
