--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -14,7 +14,7 @@ if you are mirroring the GCC pages so we can note it here!
 
 <ul>
 <li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/egcs/">mirror.aarnet.edu.au</a>
-<li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
+<li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/gcc/">gd.tuwien.ac.at</a>
 <li>Belgium (Ghent): <a href="ftp://chardonnay.elis.rug.ac.be/pub/mirrors/gcc.cygnus.com/pub/gcc/">/chardonnay.elis.rug.ac.be</a>
 <LI>Brasil: <a href="ftp://ftp.softaplic.com.br/pub/sourceware/gcc">ftp.softaplic.com.br</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
