Add check-in rules

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -152,6 +152,9 @@ following:
     them.  If there is a run-time library written in the language
     compiled by your front-end, you should, however, verify that it
     continues to build.
+
+<li>When you post your change to <code>gcc-patches</code>, indicate
+    what platform you have used for testing.
 </ul>
 These rules are designed to ensure that checked-in code does not
 contain bugs that prevent other people from continuing to get their
