--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -142,7 +142,7 @@ following:
 <li>If your change is to code that is not in a front-end, or is to   
     the C front-end, verify that the all of the GCC regression tests
     behave identically before and after your patch.   You can do a
-    <code>make check</code> at the top of the tree to run all of the
+    <code>make -k check</code> at the top of the tree to run all of the
     tests.
 
 <li>If your change is to code that is in a front-end, other than the C
