Markus fixes. Mostly by Kelley Cook <kelleycook@yahoo.com>.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -10,7 +10,7 @@
 
 <p>We have read/write access to the CVS repository available for all our
 significant developers. Maintainers are also encouraged to edit the
-<a href="gnatswrite.html">GNATS database</a>.
+<a href="gnatswrite.html">GNATS database</a>.</p>
 
 <hr>
 <h3>Contents</h3>
@@ -23,28 +23,28 @@ significant developers. Maintainers are also encouraged to edit the
 </ol>
 
 <hr>
-<a name="authenticated"><h2>Authenticated access</h2></a>
+<h2><a name="authenticated">Authenticated access</a></h2>
 
 <p>Authenticated access is provided via ssh, which you can retrieve from
 <a href="ftp://ftp.cs.hut.fi/pub/ssh/">ftp://ftp.cs.hut.fi/pub/ssh/</a>.
 ssh should build and install without any trouble and the default
-configuration files should be suitable for access to our CVS server.
+configuration files should be suitable for access to our CVS server.</p>
 
 <p>You will need to provide us with your public key.  You can generate one
 via the "ssh-keygen" program.  This will store your public key in to the
 file .ssh/identity.pub in your home directory.  We need the entire contents
 of that file.  You should mail it directly to <a href="mailto:law@cygnus.com">
 law@cygnus.com</a>.  Yes, we realize it's a public key, but there's no sense
- in cluttering up the developers list with keys.
+ in cluttering up the developers list with keys.</p>
 
 <p>Once we have this information we will set up an account on
 gcc.gnu.org and inform you by mail.  At this point you should be
 able to check out a tree with CVS and add yourself to the MAINTAINERS
 file to test write access.  See <a href="#checkin">Checking in a change</a>
-for how to proceed with checking in your changes.
+for how to proceed with checking in your changes.</p>
 
 <hr>
-<a name="setup"><h2>Setting up your local CVS tree</h2></a>
+<h2><a name="setup">Setting up your local CVS tree</a></h2>
 
 <p>Once you can login to the machine, it's trivial to start using ssh from
 your remote machine.  Set CVS_RSH in your environment to "ssh".  Then issue
@@ -60,7 +60,7 @@ in the normal fashion, including committing changes.
 
 
 <p>It is also possible to convert an existing CVS tree to use ssh by replacing
-all the "Root" files in the local tree with the following contents:
+all the "Root" files in the local tree with the following contents:</p>
 
 <blockquote><code>
 username@gcc.gnu.org:/cvs/gcc
@@ -84,15 +84,15 @@ ForwardX11 no
 <h2>Web pages</h2>
 
 <p>Note that when you check in changes to our web pages, these will
-automatically be checked out into the web server's data area.
+automatically be checked out into the web server's data area.</p>
 
 <hr>
-<a name="policies"><h2>Write access policies</h2></a>
+<h2><a name="policies">Write access policies</a></h2>
 
 <p>The GCC project grants some developers various levels of write access
 to the GCC master sources.  CVS doesn't provide fine grained control over
 access to the repository; therefore, we depend on each developer to follow
-the appropriate policies.
+the appropriate policies.</p>
 
 <ul>
   <li>Global write permission.  A very limited number of developers have
@@ -113,19 +113,19 @@ the appropriate policies.
 </ul>
 
 <p>The list of folks with write access to the repository can be found in the
-<tt>MAINTAINERS</tt> file in the GCC distribution.
+<tt>MAINTAINERS</tt> file in the GCC distribution.</p>
 
 <p>Also note that fixes for obvious typos in ChangeLog files, docs, web
 pages, comments and similar stuff need not be approved.  Just check in the
-fix.  We don't want to get overly anal about checkin policies.
+fix.  We don't want to get overly anal about checkin policies.</p>
 
 <p>When you have checked in a patch exactly as it has been approved, you
 do not no need to tell that to people -- including the approver.  People
 interested in when a particular patch is committed can check CVS or the <a
-href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a> list.
+href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a> list.</p>
 
 <hr>
-<a name="checkin"><h2>Checking in a change</h2></a>
+<h2><a name="checkin">Checking in a change</a></h2>
 
 <p>It is expected that before you check in any change you will do the
 following:
@@ -136,7 +136,7 @@ following:
     with exactly the change that you intended to check in; it's not
     good enough to have bootstrapped with an earlier variant.  (Unless
     the only changes from the earlier variant are formatting and
-    comment changes; if there are <emph>any</emph> changes to the code
+    comment changes; if there are <strong>any</strong> changes to the code
     itself you should re-bootstrap.)
 
 <li>If your change is to code that is not in a front-end, or is to   
@@ -156,13 +156,13 @@ following:
 <li>When you post your change to <code>gcc-patches</code>, indicate
     what platform you have used for testing.
 </ul>
-These rules are designed to ensure that checked-in code does not
+
+<p>These rules are designed to ensure that checked-in code does not
 contain bugs that prevent other people from continuing to get their
 work done.  There will always be bugs, but these rules help to
 minimize the amount of time where the tree does not build at
 all. Repeated failure to adhere to these rules could result in the
-revocation of check-in privileges by the Steering Committee.
-</p>
+revocation of check-in privileges by the Steering Committee.</p>
 
 <p>This is meant to provide a very quick overview of how to check in a
 change.  It is not meant to be a replacement for the CVS manual but 
@@ -170,20 +170,21 @@ instead a supplement.  The CVS manual is distributed as part of the CVS
 sources as a texinfo file.
 <a href="http://www.cyclic.com/cvs/doc-blandy.html"> 
 http://www.cyclic.com/cvs/doc-blandy.html</a> contains
-a link to an reasonably simple introduction to CVS.
+a link to an reasonably simple introduction to CVS.</p>
 
 <p> In all the commands listed below, you can give an explicit list of
 filenames to the cvs command.  We recommend you list files explicitly
-when performing checkins to avoid accidental checkins of local code.
+when performing checkins to avoid accidental checkins of local code.</p>
 
 <p> Sync your sources with the master repository via "<tt>cvs update</tt>"
 before attempting a checkin; this will save you a little time if someone
 else has modified that file since the last time you sync'd your sources.
 It will also identify any files in your local tree that you have modified.
+</p>
 
 <p>Apply the patch to your local tree and update the <tt>ChangeLog</tt>
 file.  Use the current date/time for the <tt>ChangeLog</tt> entry, not
-the time that the patch was submitted.
+the time that the patch was submitted.</p>
 
 <p>Make sure to rebuild any generated files that would be effected by
 the patch.  Make sure to check them in along with the files explicitly
@@ -205,7 +206,7 @@ set up) indicating that a change was made.  CVS will provide a message
 if an error occurs and it will not check in any files.
 
 <hr>
-<a name="example"><h2>Example check-in session</h2></a>
+<h2><a name="example">Example check-in session</a></h2>
 
 <p>Here's an actual check-in session for a patch John Carr recently sent
 to the GCC list.  This was the <tt>ChangeLog</tt> for his change:
@@ -384,9 +385,9 @@ this is the normal and expected behavior.  It is not necessary to perform
 multiple commits and split up the CVS log entry on a file by file basis.
 Note this implies that each checkin is for a single logical change
 that may effect multiple files.  If you have several unrelated changes,
-you should check them in with separate cvs commit commands.
+you should check them in with separate cvs commit commands.</p>
 
-<p>And that's it!
+<p>And that's it!</p>
 
 </body>
 </html>
