--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -129,6 +129,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
      this page is checked into CVS, which adds a level of complexity that
      is not currently handled well.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2000-06">Jun 2000
 <option value="gcc/2000-05">May 2000
 <option value="gcc/2000-04">Apr 2000
 <option value="gcc/2000-03">Mar 2000
@@ -164,6 +165,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2000-06">Jun 2000
 <option value="gcc-bugs/2000-05">May 2000
 <option value="gcc-bugs/2000-04">Apr 2000
 <option value="gcc-bugs/2000-03">Mar 2000
@@ -199,6 +201,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2000-06">Jun 2000
 <option value="gcc-patches/2000-05">May 2000
 <option value="gcc-patches/2000-04">Apr 2000
 <option value="gcc-patches/2000-03">Mar 2000
@@ -226,6 +229,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2000-06">Jun 2000
 <option value="gcc-help/2000-05">May 2000
 <option value="gcc-help/2000-04">Apr 2000
 <option value="gcc-help/2000-03">Mar 2000
@@ -238,6 +242,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2000-06">Jun 2000
 <option value="gcc-cvs/2000-05">May 2000
 <option value="gcc-cvs/2000-04">Apr 2000
 <option value="gcc-cvs/2000-03">Mar 2000
@@ -265,6 +270,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2000-06">Jun 2000
 <option value="gcc-testresults/2000-05">May 2000
 <option value="gcc-testresults/2000-04">Apr 2000
 <option value="gcc-testresults/2000-03">Mar 2000
