--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -124,6 +124,11 @@ do not no need to tell that to people -- including the approver.  People
 interested in when a particular patch is committed can check CVS or the <a
 href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a> list.</p>
 
+<p>Maintainers are free to import files maintained outside
+the tree from their official versions without explicit write approval.   
+Such files would include <code>config.guess</code> and 
+<code>config.sub</code>.
+
 <hr>
 <h2><a name="checkin">Checking in a change</a></h2>
 
