--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -127,7 +127,7 @@ href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a> list.</p>
 <p>Maintainers are free to import files maintained outside
 the tree from their official versions without explicit write approval.   
 Such files would include <code>config.guess</code> and 
-<code>config.sub</code>.
+<code>config.sub</code>.</p>
 
 <hr>
 <h2><a name="checkin">Checking in a change</a></h2>
