Fix typo in configure syntax for UDI builds.  It's 'program-prefix=udk-', not '-exec-prefix-udk-

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -289,7 +289,7 @@ from the right place) while making the tools not think we're actually
 building a cross compiler.   The easiest way to do this is with a configure
 command like this:</p>
 <pre>
-  CC=/udk/usr/ccs/bin/cc <i>/your/path/to/</i>gcc/configure --host=i686-pc-udk --target=i686-pc-udk --exec-prefix=udk-
+  CC=/udk/usr/ccs/bin/cc <i>/your/path/to/</i>gcc/configure --host=i686-pc-udk --target=i686-pc-udk --program-prefix=udk-
 </pre>
 <p><i>You should substitute 'i686' in the above command with the appropriate
 processor for your host.</i></p>
