Add missing <BR>s.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -156,8 +156,8 @@ INLIST.gcc<br>
 can use the following recipe (Use at your own risk!):</p>
 
 <blockquote><code>
-:0 Wh: msgid.lock
-* ^Sender: gcc(-announce|-bugs|-patches)?-owner@gcc.gnu.org
+:0 Wh: msgid.lock<br>
+* ^Sender: gcc(-announce|-bugs|-patches)?-owner@gcc.gnu.org<br>
 | formail -D 8192 msgid.cache
 </code></blockquote>
 
