Add text about chasing patches that may have fallen through the cracks. By Timothy Bedding <Timothy.Bedding@btinternet.com>.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -96,5 +96,13 @@ contributions must meet.</p>
   the <a href="cvs.html">Anonymous read-only CVS access</a> and 
   <a href="cvswrite.html">Read-write CVS access</a> pages.
 
+  <p>If you do not receive a response to a patch that you have submitted
+  within a month or so,
+  it may be a good idea to chase it by sending a follow-up email to
+  <a href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>.
+  Patches can occasionally fall through the cracks. Please be sure to
+  include in the follow-up email the URL of the entry in the mailing list
+  archive of the original submission.</p>
+
 </body>
 </html>
