Move announce.html and javaannounce.html in the news subdirectory. Add a disclaimer to news/announce.html.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -244,7 +244,7 @@ that tracks checkins to the egcs webpages CVS repository.
 <dd>
 <a href="http://www.cygnus.com/">Cygnus</a> announces the first public
 release of libgcj, the runtime component of the GNU compiler for Java.
-<br><a href="javaannounce.html">Read the release announcement</a>.
+<br><a href="news/javaannounce.html">Read the release announcement</a>.
 <br><a href="http://sourceware.cygnus.com/java/">Goto the libgcj homepage</a>.
 </dd>
 
@@ -478,7 +478,7 @@ framework</b></a>.
 
 <dt><b>August 15, 1997</b></dt>
 <dd>
-  The egcs project is <a href="announcement.html">announced publicly</a>
+  The egcs project is <a href="news/announcement.html">announced publicly</a>
   and the first <a href="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">
   snapshot</a>
   is put on-line.
