--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -74,7 +74,8 @@ contributions must meet.</p>
   <li> A ChangeLog entry as plaintext; see the various ChangeLog files
        for format and content.<br>
        Note that, unlike some other projects, we do require ChangeLogs
-       also for documentation (i.e., .texi files).
+       also for documentation (i.e., .texi files).  They are not required
+       for updates to the web pages.
   <li> <p>The patch itself.  If you are accessing the <a href="cvs.html">
        CVS repository</a> at Cygnus, use 
        &quot;<code>cvs update; cvs diff -c3p</code>&quot;; else, use 
