--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -95,8 +95,9 @@ following steps:
 
 <h2>Building in parallel</h2>
 
-<p> If you have a multiprocessor you can use `<code>make bootstrap
-MAKE="make -j 2" -j 2</code>' instead of just `<code>make bootstrap</code>'
+<p> If you have a multiprocessor system you can use `<code>make bootstrap
+MAKE="make -j 2" -j 2</code>' or just `<code>make -j 2 bootstrap</code>'
+for GNU Make 3.79 and above instead of just `<code>make bootstrap</code>'
 when building GCC.  You can use a bigger number instead of two if
 you like.  In most cases, it won't help to use a number bigger than
 the number of processors in your machine.
