Refer to "Bounds checking patches". By William Bader <william@nscs.fast.net>.

--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -57,6 +57,41 @@ now, and, although it has been superceeded by <code>libstdc++</code>,
 it is still providing some useful services. And, it has proven to
 be a good testsuite for the compiler...
 
+<h2>
+Bounds checking patches for
+<A HREF="http://www.inter.NL.net/hcc/Haj.Ten.Brugge">GCC releases</A>
+and
+<A HREF="ftp://nscs.fast.net/pub/binaries/boundschecking">GCC snapshots</A>
+</h2>
+
+<p>These patches add a <code>-fbounds-checking</code> flag that
+adds bounds checking tests to pointer and array accesses.
+Richard Jones developed the
+<A HREF="http://www-ala.doc.ic.ac.uk/~phjk/BoundsChecking.html">
+patches against gcc-2.7</A> in 1995.
+Herman ten Brugge is the current maintainer and has updated the patches for
+gcc-2.95.2.
+<a href="mailto:william@nscs.fast.net">William Bader</a> has unofficial
+updates for selected GCC snapshots.</p>
+
+<p>You may freely mix object modules compiled with and without bounds
+checking.  The bounds checker also includes replacements for
+<code>mem*</code> and <code>str*</code> routines and can detect
+invalid calls against checked memory objects, even from modules
+compiled without bounds checking.</p>
+
+<p>Here is a
+<A HREF="ftp://nscs.fast.net/pub/binaries/boundschecking/example.html#Example">
+compilation and execution</A> of an example program.</p>
+
+<p>These patches are unrelated to the fat pointer bounds checking
+patches by Greg McGary &lt;gkm@eng.ascend.com&gt; which change the
+size of pointers and require building modified versions of libc and
+most other libraries that your program calls.  Greg's patches will
+eventually be incorporated into GCC.  If you can use Greg's fat
+pointer bounds checker, it has the advantage of better run-time
+performance and support for languages other than C.</p>
+
 <hr>
 
 <h1>GCC Museum</h1>
