--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -9,8 +9,8 @@
 <h1 align="center">GCC Snapshots</h1>
 
 <p>We recommend that you use <a href="cvs.html">CVS to access our
-current development sources</a>, but we also make snapshots available
-for FTP download.</p>
+current development sources</a>, although we also make regular
+snapshots available for FTP download.</p>
 
 <p>Please use our
 <a href="ftp://ftp.freesoftware.com/pub/sourceware/gcc/">main mirror
@@ -20,8 +20,10 @@ site</a> or any of our other <a href="mirrors.html">mirrors</a>.</p>
 of our current development sources on a regular base:</p>
 
 <ul>
-<li><a href="http://www.netwinder.org/build/gcc.html">armv3l, armv4l, and
-    i386</a> by netwinder.org.
+<li><a href="http://www.netwinder.org/build/gcc.html">
+    armv3l-unknown-linux-gnu, armv4l-unknown-linux-gnu, and
+    i386-unknown-linux-gnu</a> by 
+    <a href="http://www.rebel.com">Rebel.com</a>
 <li><a href="http://www.codesourcery.com/gcc-snapshots.html">i386</a> by
     CodeSourcery.
 </ul>
