Add the actual target tripplet for binary snapshots by CodeSourcery.

--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -24,8 +24,8 @@ of our current development sources on a regular base:</p>
     armv3l-unknown-linux-gnu, armv4l-unknown-linux-gnu, and
     i386-unknown-linux-gnu</a> by 
     <a href="http://www.rebel.com">Rebel.com</a>
-<li><a href="http://www.codesourcery.com/gcc-snapshots.html">i386</a> by
-    CodeSourcery.
+<li><a href="http://www.codesourcery.com/gcc-snapshots.html">i686-pc-linux-gnu</a>
+    by CodeSourcery.
 </ul>
 
 </body>
