--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -25,17 +25,14 @@ significant developers. Maintainers are also encouraged to edit the
 <hr>
 <h2><a name="authenticated">Authenticated access</a></h2>
 
-<p>Authenticated access is provided via ssh, which you can retrieve from
-<a href="ftp://ftp.cs.hut.fi/pub/ssh/">ftp://ftp.cs.hut.fi/pub/ssh/</a>.
-ssh should build and install without any trouble and the default
-configuration files should be suitable for access to our CVS server.</p>
-
-<p>You will need to provide us with your public key.  You can generate one
-via the "ssh-keygen" program.  This will store your public key in to the
-file .ssh/identity.pub in your home directory.  We need the entire contents
-of that file.  You should mail it directly to <a href="mailto:law@cygnus.com">
-law@cygnus.com</a>.  Yes, we realize it's a public key, but there's no sense
- in cluttering up the developers list with keys.</p>
+<p>Authenticated access is provided via the SSH protocol. Please
+provide us with your public key which you can generate via the
+"ssh-keygen" program.  This will store your public key in the file
+.ssh/identity.pub in your home directory.
+We need the entire contents of that file.  You should mail it directly
+to <a href="mailto:law@cygnus.com"> law@cygnus.com</a>.  Yes, we
+realize it's a public key, but there's no sense in cluttering up the
+developers list with keys.</p>
 
 <p>Once we have this information we will set up an account on
 gcc.gnu.org and inform you by mail.  At this point you should be
