--- a/htdocs/gcc-2.95/c++features.html
+++ b/htdocs/gcc-2.95/c++features.html
@@ -24,7 +24,7 @@
 * In overload resolution, type conversion operators are now properly
   treated as always coming from the most derived class.
 
-* C9x-style restricted pointers are supported, using the `__restrict'
+* C99-style restricted pointers are supported, using the `__restrict'
   keyword.
 
 * You can now use -fno-implicit-inline-templates to suppress writing out
