--- a/htdocs/proj-cpplib.html
+++ b/htdocs/proj-cpplib.html
@@ -158,7 +158,7 @@ please read the rest of this document first!
   <li>The handling of <code>#define</code> and <code>#if</code> must
       be fixed so it uses the same lexical analysis code as the rest of
       cpplib (i.e. <code>cpp_get_token</code>).  This is essential to
-      adding support for the new preprocessor features in C9x and C89
+      adding support for the new preprocessor features in C99 and C89
       Amendment 1.
 
   <li>cpplib makes two separate passes over the input file, which
