Further C9X -> C99 updates. By Joseph S. Myers <jsm28@cam.ac.uk>.

--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -18,9 +18,9 @@ href="proj-cpplib.html">C preprocessor</a>.
 inadequacies</a>, if you'd prefer to think about it in terms of problems
 instead of features.
 
-<h2>Changes to support C99 draft</h2>
+<h2>Changes to support C99 standard</h2>
 
-<p>The (not yet published) next revision of the C standard requires a
+<p>The new version of the C standard (ISO/IEC 9899:1999) requires a
 number of library changes; these have to be provided by the C library,
 and not by gcc. A <a href="c99status.html">short overview</a> of the C99
 implementation status is available as well.</p>
