--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -13,8 +13,8 @@ current development sources</a>, although we also make regular
 snapshots available for FTP download.</p>
 
 <p>Please use our
-<a href="ftp://ftp.freesoftware.com/pub/sourceware/gcc/">main mirror
-site</a> or any of our other <a href="mirrors.html">mirrors</a>.</p>
+<a href="ftp://ftp.freesoftware.com/pub/sourceware/gcc/snapshots/">main
+mirror site</a> or any of our other <a href="mirrors.html">mirrors</a>.</p>
 
 <p>In addition, some of our contributors also provide pre-built binaries
 of our current development sources on a regular base:</p>
