* faq.html: Typo.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -665,7 +665,7 @@ $ ../configure [...]
           <h3><a name="5_1">5.1 My program is dumping core! What's going on?</a></h3>
         </dt>
         <p> 
-        <dd>I could be any number of things. One common mistake is having your 
+        <dd>It could be any number of things. One common mistake is having your 
           <tt>CLASSPATH</tt> environment variable pointing at a third party's 
           java.lang and friends. Either unset <tt>CLASSPATH</tt>, or make sure 
           it does not refer to core libraries other than those found in libgcj.zip.</dd>
@@ -808,7 +808,7 @@ $ ../configure [...]
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.23 2000/06/06 02:23:46 bryce Exp $ </small></address>
+<small> $Id: faq.html,v 1.24 2000/06/07 08:37:32 bryce Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
