Fix a broken link and add two links concerning availability.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -80,9 +80,9 @@ reflects the fundamental goals of the project.
 
 <p>We want to work closely with contributors to help and encourage
 them to submit their changes for inclusion in GCC.  We thus provide
-access to our <a href="#development_sources">development sources</a>
-with weekly snapshots and anonymous CVS.  All code continues to be <a
-href="contribute.html">assigned to the FSF</a> exactly as before.</p>
+access to our development sources with <a href="snapshots.html">weekly
+snapshots</a> and <a href="cvs.html">anonymous CVS</a>. All code is <a
+href="contribute.html">assigned to the FSF</a>.</p>
 
 <p>We will provide regular, high quality 
 <a href="ftp://gcc.gnu.org/pub/gcc/releases/index.html">releases</a>.
