--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,7 +43,7 @@
 </P>
 <H2>Download</H2>
 <P>
-<A HREF="ftp://gcc.gnu.org/pub/gcc/releases/index.html">Releases</A><BR>
+<A HREF="releases.html">Releases</A><BR>
 <A HREF="snapshots.html">Snapshots</A><BR>
 <A HREF="mirrors.html">Mirror sites</A><BR>
 <A HREF="install/binaries.html">Binaries</A>
